cmake_minimum_required( VERSION 3.0 )

project (demineur)

FILE(GLOB SOURCES src/*.cpp)
FILE(GLOB HEADERS include/*.h)

add_executable(${PROJECT_NAME} ${SOURCES} ${HEADERS})

INCLUDE (FindPkgConfig)

PKG_SEARCH_MODULE(SDL REQUIRED sdl)
PKG_SEARCH_MODULE(SDLIMAGE REQUIRED SDL_image)
PKG_SEARCH_MODULE(SDLTTF REQUIRED SDL_ttf)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include ${SDL_INCLUDE_DIRS} ${SDLIMAGE_INCLUDE_DIRS} ${SDLTTF_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${SDL_LIBRARIES} ${SDLIMAGE_LIBRARIES} ${SDLTTF_LIBRARIES})

